2006-12-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR testsuite/30157
	* lib/target-supports.exp (check_cxa_atexit_available): Return false
	for target "hppa.*hpux10".

2006-12-13  Lee Millward  <lee.millward@codesourcery.com>

	PR c++27316
	* g++.dg/inherit/error3.C: New test.

	PR c++/28740
	* g++.dg/inherit/error4.C: New test. 
	
2006-12-12  Josh Conner  <jconner@apple.com>

	* g++.dg/abi/thunk3.C: Use .weak_definition on darwin.
	* g++.dg/abi/thunk4.C: Likewise.
	* g++.dg/abi/rtti3.C: Likewise.

2006-12-12  Richard Sandiford  <richard@codesourcery.com>

	* lib/gcc-dg.exp (${tool}_load): Fix invocation of
	saved_${tool}_load.

2006-12-12  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30147
	* gfortran.fortran-torture/compile/pr30147.f90: New testcase.

2006-12-11  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29732
	* g++.dg/template/crash65.C: New test.
	* g++.dg/template/spec16.C: Tweak error markers.

2006-12-11  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/29973
	* gfortran.dg/specifics_1.f90: Remove check for CHAR.
	* gfortran.dg/specifics_2.f90: Remove check for CHAR.
	* gfortran.dg/specifics_3.f90: Remove.
	* gfortran.fortran-torture/execute/specifics.f90: Remove test
	for CHAR.

2006-12-10  Thomas Koenig  <Thomas.Koenig@online.de>

	Backport from mainline
	PR libfortran/29568
	* gfortran.dg/convert_implied_open.f90:  Change to
	new default record length.
	* gfortran.dg/unf_short_record_1.f90:  Adapt to
	new error message.
	* gfortran.dg/unformatted_subrecords_1.f90:  New test.
	PR libfortran/30009
	PR libfortran/30056
	* gfortran.dg/read_eof_4.f90:  Add tests.
	* gfortran.dg/readwrite_unf_direct_eor_1.f90:  New test.
	* gfortran.dg/unf_read_corrupted_1.f90: New test.

2006-12-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29821
	* gfortran.dg/parameter_array_section_1.f90: New test.

	PR fortran/29912
	* gfortran.dg/char_result_12.f90: New test.

	PR fortran/29916